--- a/end.html
+++ b/end.html
@@ -7,10 +7,13 @@
 </head>
 <body>
 	<div class="box largetext">
-		<div class="header-text">よろしくおねがいします</div>
-		<div class="footer-text">
-			<a href="./01.html">回答を始める</a>
+		<div class="header-text">Thanks</div>
+		<div class="barbox">
+			<div class="center-image">
+				<img src="https://live.staticflickr.com/778/20640894926_cdd2ccc266_n.jpg" alt="">
+			</div>
 		</div>
 	</div>
 </body>
 </html>
+
