add participant ID

--- a/qb2/end.html
+++ b/qb2/end.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="box largetext">
 		<div class="header-text">Thanks</div>
-		<div class="barbox">
+		<div class="center-cell">
 			<div class="center-image">
 				<img src="https://live.staticflickr.com/778/20640894926_cdd2ccc266_n.jpg" alt="">
 			</div>
