--- a/qb2/index.html
+++ b/qb2/index.html
@@ -8,6 +8,10 @@
 <body>
 	<div class="box largetext">
 		<div class="header-text">よろしくおねがいします</div>
+		<div class="center-cell">
+			<label class="weaktext" for="participantID">参加者ID</label>
+			<input type="text" size="7" placeholder="IDを入力" spellcheck="false" autocorrect="off" id="participantID">
+		</div>
 		<div class="footer-text">
 			<a href="./01.html">回答を始める</a>
 		</div>
