initialise using sessionstorage

--- a/qb2/index.html
+++ b/qb2/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./main.css">
+	<script src="./init.js"></script>
 	<title></title>
 </head>
 <body>
@@ -13,7 +14,7 @@
 			<input type="text" size="7" placeholder="IDを入力" spellcheck="false" autocorrect="off" id="participantID">
 		</div>
 		<div class="footer-text">
-			<a href="./01.html">回答を始める</a>
+			<a id="start" href="./01.html">回答を始める</a>
 		</div>
 	</div>
 </body>
