--- a/qb2/end.html
+++ b/qb2/end.html
@@ -13,6 +13,9 @@
 				<img src="https://live.staticflickr.com/778/20640894926_cdd2ccc266_n.jpg" alt="">
 			</div>
 		</div>
+		<div class="footer-text">
+			<a id='finish' href="#">結果を保存するボタン</a>
+		</div>
 	</div>
 </body>
 </html>
