--- a/qb2/02.html
+++ b/qb2/02.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./main.css">
+	<script src="./questionPage.js"></script>
 	<title></title>
 </head>
 <body>
@@ -14,7 +15,7 @@
 			</div>
 		</div>
 		<div class="barbox">
-			<input class="range-bar" type="range" min="0" max="1" step="any" />
+			<input id='response' class="range-bar" type="range" min="0" max="1" step="any" />
 		</div>
 		<div class="post-content descr">
 			<div class="center-image">
@@ -22,7 +23,7 @@
 			</div>
 		</div>
 		<div class="footer-text">
-			<a href="./end.html">回答を終える</a>
+			<a id='next' href="./end.html">回答を終える</a>
 		</div>
 	</div>
 </body>
