--- a/qb2/end.html
+++ b/qb2/end.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./main.css">
+	<script src="./js/finish.js"></script>
 	<title></title>
 </head>
 <body>
