--- a/qb2/index.html
+++ b/qb2/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./main.css">
-	<script src="./init.js"></script>
+	<script src="./js/init.js"></script>
 	<title></title>
 </head>
 <body>
