maybe this is simpler

--- a/qb2/end.html
+++ b/qb2/end.html
@@ -15,7 +15,7 @@
 			</div>
 		</div>
 		<div class="footer-text">
-			<a id='finish' href="#">結果を保存するボタン</a>
+			<a id='finish' href="#">準備中…</a>
 		</div>
 	</div>
 </body>
