--- a/qbwa/01.html
+++ b/qbwa/01.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./main.css">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-title" content="SUPER_FORM">
 	<script src="./js/questionPage.js"></script>
 	<title></title>
 </head>
