--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<ol>
 		<li> <a href="./qabar">最初のプロトタイプ</a></li>
 		<li> <a href="./qb2">バーの色やめる+ダウンロードできるように</a></li>
+		<li> <a href="./qbwa">web app として動かせるようシングルページ化？</a></li>
 	</ol>
 </body>
 </html>
