--- a/qbwa/index.html
+++ b/qbwa/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./main.css">
 	<script src="./js/main.js"></script>
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-title" content="試作Mk.qbwa">
 	<title></title>
 </head>
 <body>
