at least give some size

--- a/qbwa/index.html
+++ b/qbwa/index.html
@@ -36,7 +36,7 @@
 		</div>
 		<div id="post-bar" class="post-content descr"></div>
 		<div id='footer' class="footer-text">
-			<button id='next'> 回答を始める </button>
+			<button id='next' class="button"> 回答を始める </button>
 		</div>
 	</div>
 </body>
