(try manifest.json)

--- a/qb2-wa/end.html
+++ b/qb2-wa/end.html
@@ -6,6 +6,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="SUPER_FORM">
 	<link rel="stylesheet" href="./main.css">
+	<link rel="manifest" href="./manifest.json">
 	<script src="./js/finish.js"></script>
 	<title></title>
 </head>
