--- a/qb2-wa/01.html
+++ b/qb2-wa/01.html
@@ -6,6 +6,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="SUPER_FORM">
+	<link rel="manifest" href="./manifest.json">
 	<script src="./js/questionPage.js"></script>
 	<title></title>
 </head>
