--- a/qb2-wa/index.html
+++ b/qb2-wa/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="apple-mobile-web-app-title" content="SUPER_FORM">
+	<!-- <meta name="apple-mobile-web-app-capable" content="yes">            -->
+	<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
+	<!-- <meta name="apple-mobile-web-app-title" content="SUPER_FORM">       -->
 	<link rel="manifest" href="./manifest.json">
 	<link rel="stylesheet" href="./main.css">
 	<script src="./js/init.js"></script>
