--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<li> <a href="./qabar">最初のプロトタイプ</a></li>
 		<li> <a href="./qb2">バーの色やめる+ダウンロードできるように</a></li>
 		<li> <a href="./qbwa">web app として動かせるようシングルページ化？</a></li>
+		<li> <a href="./qb2-wa/">manifest.json で standalone</a></li>
 	</ol>
 </body>
 </html>
